cart quantity fixed to align with cart

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -64,7 +64,7 @@ nav{
     position:absolute;
     text-align: center;
     top:-11px;
-    right:1.9rem;
+    right:90px;
     color:#391117;;
     font-size:1rem;
     font-weight: bolder;
